# pixel2sky

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
examples/: sky_viewer.py
src/pixel2sky/: __init__.py  _version.py  mapper.py  projection.py  rotation.py
tests/: __init__.py  test_mapper.py  test_projection.py  test_rotation.py
